--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="Horiseon, SEO, search engine optimization, online reputation management, social media marketing">
+    <meta name="desription" content="Horiseon can greatly benefit your companies online presence through awared winning SEO, online reputation management, and social media marketing services.">
+    <meta name="author" content="Horiseon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Home Page</title>
+    <title>Horiseon — SEO, Online Reputation Management, and Social Media Marketing</title>
 </head>
 
 <body>
 
     <!-- navigation -->
-    <div class="header">
+    <header class="header">
         <h1>Horiseon</h1>
         <div>
             <nav>
@@ -27,14 +31,15 @@
                 </ul>
             </nav>
         </div>
-    </div>
+    </header>
     
     <!-- hero/jumbotron -->
     <div class="hero" title="Four coworkers in a boardroom discussing SEO strategies.">
+        <span class="background-image" role="img" aria-label="Four coworkers discussing online business strategy around table"></span>
     </div>
 
     <!-- main content -->
-    <div class="content">
+    <main class="content">
         <article>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Coffee cup, laptop, magnifying glass, and cup of writing utensils surrounding a notebook with a drawing of search engine optimization strategies" class="float-left" />
@@ -64,11 +69,10 @@
             </p>
         </div>
         </article>
-    </div>
+    </main>
 
     <!-- benefits aside -->
-    <div class="benefits">
-        <aside>
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
@@ -76,9 +80,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        </aside>
 
-        <aside>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="" />
@@ -86,9 +88,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        </aside>
 
-        <aside>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""></img>
@@ -96,8 +96,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-        </aside>
-    </div>
+    </aside>
 
     <!-- footer -->
 <footer>
